--- a/package.json
+++ b/package.json
@@ -8,10 +8,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-sass": "^2.3.1",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-util": "^3.0.7",
     "babel-core": "^6.7.6",
     "babel-preset-es2015": "^6.1.18",
     "babel-register": "^6.7.2",
@@ -21,10 +17,15 @@
     "eslint": "^2.7.0",
     "exorcist": "^0.4.0",
     "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.1.0",
     "gulp-eslint": "^2.0.0",
     "gulp-if-else": "^1.0.3",
+    "gulp-sass": "^2.3.1",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.3",
+    "gulp-util": "^3.0.7",
     "jquery": "^2.2.2",
+    "node-font-awesome": "^1.0.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0"
