--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0"
+  },
+  "dependencies": {
+    "imagesloaded": "^4.1.0"
   }
 }
