--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "exorcist": "^0.4.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-cssnano": "^2.1.2",
     "gulp-eslint": "^2.0.0",
     "gulp-if-else": "^1.0.3",
     "gulp-sass": "^2.3.1",
