--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-eslint": "^2.0.0",
     "gulp-if-else": "^1.0.3",
     "gulp-sass": "^2.3.1",
+    "gulp-sass-lint": "^1.2.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
